# resonance

./: .gitmodules  BUILD.md  CMakeLists.txt  README.md  imgui.ini
include/: Application.h  AudioCore.h  AudioEngine.h  Track.h  application.h  audio_core.h  audio_engine.h  track.h
include/Callbacks/: Passthrough.h
include/GUI/: MainWindow.h
include/GUI/Components/: Toolbar.h
include/callbacks/: audio_callback.h  passthrough.h
include/ui/: icons_font_awesome6regular.h  icons_lucide.h  main_window.h
include/ui/components/: timebar.h  toolbar.h
src/: Application.cpp  AudioEngine.cpp  application.cpp  audio_engine.cpp  main.cpp
src/Callbacks/: Passthrough.cpp
src/GUI/: MainWindow.cpp
src/GUI/Components/: Toolbar.cpp
src/callbacks/: passthrough.cpp
src/ui/: main_window.cpp
src/ui/components/: toolbar.cpp
